0.07

0.06 2018-02-07T07:46:51+01:00
 - Fix Makefile.PL for new version of Perl and no default »use lib '.'«.

0.05 2017-12-26T11:22:11+01:00
 - Fix Makefile.PL for new version of Perl and no default »use lib '.'«.
 - Fix author dependencies.
 - Fix minimal Perl version in Makefile.PL.
 - Remove trivial pragmas.
 - Update Module::Install to 1.18 version.
 - Update author name.
 - Update copyright years.

0.04 2015-09-22T16:20:18+02:00
 - Move author tests to xt/ directory.
 - Remove trailing whitespace.
 - Update copyright years.

0.03 2015-09-07T10:47:50+02:00
 - Add readme_from directive to Makefile.PL.
 - Fix LICENSE file.
 - Improve SEE ALSO section in doc.
 - Update Module::Install to 1.16 version.
 - Update LICENSE AND COPYRIGHT section in doc to my standard.

0.02 2014-08-13T09:44:48+02:00
 - Add minimum version of Perl.
 - Add tests for constructor.
 - Add tests for get() method.

0.01 2014-08-04T23:49:35+02:00
 - First version.