@@ -72,7 +72,7 @@ AUTHOR
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-     © Michal Josef Špaček 2013-2017
+     © Michal Josef Špaček 2013-2021
      BSD 2-Clause License
 
 VERSION
