@@ -1,4 +1,5 @@
 0.07
+ - Update copyright years.
 
 0.06 2018-02-07T07:46:51+01:00
  - Fix Makefile.PL for new version of Perl and no default »use lib '.'«.
